--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: 167.88.61.213, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-2.35MB/s(Youtube:不良林), server: 85.208.108.60, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.14MB/s(Youtube:不良林), server: 85.208.108.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.61.213, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 167.88.61.213, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 38.114.114.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2, server: 167.88.61.213, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.59MB/s(Youtube:不良林), server: 85.208.108.60, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
