--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.61.213, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 167.88.61.213, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 38.114.114.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2, server: 167.88.61.213, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.59MB/s(Youtube:不良林), server: 85.208.108.60, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-1.30MB/s(Youtube:不良林), server: 85.208.108.60, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 38.121.43.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇯🇵 日本-2.68MB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1001.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-752.8KB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
