--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.30MB/s(Youtube:不良林), server: 85.208.108.60, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 38.121.43.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇯🇵 日本-2.68MB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-736.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.86MB/s(Youtube:不良林), server: 85.208.108.60, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.68MB/s(Youtube:不良林), server: 85.208.108.59, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 38.75.136.21, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.68.134.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-1001.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-752.8KB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-736.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-736.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-736.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
@@ -66,20 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-736.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
@@ -88,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-736.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
@@ -104,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-736.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
@@ -129,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-736.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1001.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-752.8KB/s(Youtube:不良林)
