--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.63MB/s(Youtube:不良林), server: 85.208.108.59, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-820.5KB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-2.95MB/s(Youtube:不良林), server: 85.208.108.59, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: 38.114.114.19, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 167.88.61.213, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-631.3KB/s(Youtube:不良林), server: 85.208.108.60, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.98MB/s(Youtube:不良林), server: 85.208.108.59, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.68.134.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
